--- a/public/landing/assets/css/main.css
+++ b/public/landing/assets/css/main.css
@@ -19,8 +19,9 @@
 /* Colors */
 :root {
   --color-default: #364d59;
-  --color-primary: #feb900;
+  --color-primary: #086AD8;
   --color-secondary: #52565e;
+  --color-red-upu: #D62329;
 }
 
 /* Smooth scroll behavior */
@@ -68,13 +69,17 @@ section {
   background-color: #f5f6f7;
 }
 
+.section-bg-dark {
+  background-color: #20303B;
+}
+
 .section-header {
   text-align: center;
   padding-bottom: 70px;
 }
 
 .section-header h2 {
-  font-size: 32px;
+  font-size: 2rem;
   font-weight: 700;
   position: relative;
   color: #2e3135;
@@ -100,6 +105,69 @@ section {
 .section-header p {
   margin: 0 auto 0 auto;
 }
+
+/* My Section Header */
+.section-header-responsive {
+  text-align: center;
+  padding-bottom: 70px;
+}
+
+.section-header-responsive h2 {
+  font-size: 32px;
+  font-weight: 700;
+  position: relative;
+  color: #2e3135;
+  display: inline-flex; /* Menyediakan konteks flexbox untuk :before dan :after */
+  align-items: center; /* Memastikan garis berada di tengah secara vertikal */
+}
+
+.section-header-responsive h2:before,
+.section-header-responsive h2:after {
+  content: "";
+  width: 50px;
+  height: 2px;
+  background: var(--color-primary);
+  display: inline-block;
+}
+
+.section-header-responsive h2:before {
+  margin-right: 15px;
+}
+
+.section-header-responsive h2:after {
+  margin-left: 15px;
+}
+
+/* Responsif */
+@media (max-width: 1199px) {
+  .section-header-responsive h2 {
+    font-size: 1.75rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .section-header-responsive h2 {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .section-header-responsive h2 {
+    font-size: 1.25rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .section-header-responsive h2 {
+    font-size: 1rem;
+  }
+}
+
+.section-header-responsive p {
+  margin: 0 auto;
+}
+
+
 
 @media (min-width: 1199px) {
   .section-header p {
@@ -188,7 +256,7 @@ section {
 }
 
 .scroll-top:hover {
-  background: #ffc732;
+  background: #D62329;
   color: #fff;
 }
 
@@ -362,10 +430,12 @@ section {
     left: 28px;
     top: calc(100% + 30px);
     margin: 0;
+    margin-top: 10px;
     padding: 10px 0;
     z-index: 99;
     opacity: 0;
     visibility: hidden;
+    border-top: 5px solid var(--color-primary);
     background: #fff;
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
     transition: 0.3s;
@@ -969,7 +1039,7 @@ section {
 .projects .portfolio-content .portfolio-info .preview-link,
 .projects .portfolio-content .portfolio-info .details-link {
   position: absolute;
-  left: calc(50% - 40px);
+  left: calc(50% - 14px);
   font-size: 26px;
   top: calc(50% - 14px);
   color: #fff;
@@ -1769,6 +1839,125 @@ section {
   background: rgba(254, 185, 0, 0.8);
 }
 
+/* My Accreditation */
+.accreditation .info-item {
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.08);
+  padding: 20px 0 30px 0;
+}
+
+.accreditation .info-item .icon-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 56px;
+  height: 56px;
+  font-size: 24px;
+  line-height: 0;
+  color: var(--color-primary);
+  border-radius: 50%;
+  border: 2px dotted #ffd565;
+}
+
+.accreditation .info-item h3 {
+  font-size: 20px;
+  color: #6c757d;
+  font-weight: 700;
+  margin: 10px 0;
+}
+
+.accreditation .info-item p {
+  padding: 0;
+  line-height: 24px;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+.accreditation .php-email-form {
+  width: 100%;
+  background: #fff;
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.08);
+  padding: 30px;
+}
+
+.accreditation .php-email-form .form-group {
+  padding-bottom: 20px;
+}
+
+.accreditation .php-email-form .error-message {
+  display: none;
+  color: #fff;
+  background: #df1529;
+  text-align: left;
+  padding: 15px;
+  font-weight: 600;
+}
+
+.accreditation .php-email-form .error-message br+br {
+  margin-top: 25px;
+}
+
+.accreditation .php-email-form .sent-message {
+  display: none;
+  color: #fff;
+  background: #059652;
+  text-align: center;
+  padding: 15px;
+  font-weight: 600;
+}
+
+.accreditation .php-email-form .loading {
+  display: none;
+  background: #fff;
+  text-align: center;
+  padding: 15px;
+}
+
+.accreditation .php-email-form .loading:before {
+  content: "";
+  display: inline-block;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  margin: 0 10px -6px 0;
+  border: 3px solid #059652;
+  border-top-color: #fff;
+  -webkit-animation: animate-loading 1s linear infinite;
+  animation: animate-loading 1s linear infinite;
+}
+
+.accreditation .php-email-form input,
+.accreditation .php-email-form textarea {
+  border-radius: 0;
+  box-shadow: none;
+  font-size: 14px;
+}
+
+.accreditation .php-email-form input:focus,
+.accreditation .php-email-form textarea:focus {
+  border-color: var(--color-primary);
+}
+
+.accreditation .php-email-form input {
+  height: 44px;
+}
+
+.accreditation .php-email-form textarea {
+  padding: 10px 12px;
+}
+
+.accreditation .php-email-form button[type=submit] {
+  background: var(--color-primary);
+  border: 0;
+  padding: 10px 35px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 5px;
+}
+
+.accreditation .php-email-form button[type=submit]:hover {
+  background: rgba(254, 185, 0, 0.8);
+}
+
 @keyframes animate-loading {
   0% {
     transform: rotate(0deg);
@@ -1808,11 +1997,11 @@ section {
 }
 
 .recent-blog-posts .post-item .post-title {
-  font-size: 24px;
+  font-size: 16px;
   color: var(--color-secondary);
   font-weight: 700;
   transition: 0.3s;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 .recent-blog-posts .post-item .meta i {
@@ -1949,6 +2138,28 @@ section {
 
 .hero .info .btn-get-started:hover {
   background: var(--color-primary);
+}
+
+.btn-get-all {
+  font-family: var(--font-primary);
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 40px;
+  border-radius: 0px;
+  transition: 0.3s;
+  margin: 10px;
+  /* color: var(--color-default); */
+  color: #fff;
+  /* border: 2px solid var(--color-primary); */
+  background: var(--color-primary)
+}
+
+.btn-get-all:hover {
+  transition: 0.3s;
+  background: var(--color-red-upu);
+  color: #fff;
 }
 
 .hero .carousel-control-prev {
@@ -2120,6 +2331,496 @@ section {
   transform: scale(1.1);
 }
 
+/* My News */
+.news .news-pagination {
+  margin-top: 30px;
+  color: #838893;
+}
+
+.news .news-pagination ul {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.news .news-pagination li {
+  margin: 0 5px;
+  transition: 0.3s;
+}
+
+.news .news-pagination li a {
+  color: var(--color-secondary);
+  padding: 7px 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.news .news-pagination li.active,
+.news .news-pagination li:hover {
+  background: var(--color-primary);
+  color: #fff;
+}
+
+.news .news-pagination li.active a,
+.news .news-pagination li:hover a {
+  color: var(--color-white);
+}
+
+.news .row .content .posts-list .post-item {
+  box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.06);
+  transition: 0.3s;
+}
+
+.news .row .content .posts-list .post-img img {
+  transition: 0.5s;
+}
+
+.news .row .content .posts-list .post-date {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background-color: var(--color-primary);
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 13px;
+  padding: 6px 12px;
+  font-weight: 500;
+}
+
+.news .row .content .posts-list .post-content {
+  padding: 30px;
+}
+
+.news .row .content .posts-list .post-title {
+  font-size: 24px;
+  color: var(--color-secondary);
+  font-weight: 700;
+  transition: 0.3s;
+  margin-bottom: 15px;
+}
+
+.news .row .content .posts-list .meta i {
+  font-size: 16px;
+  color: var(--color-primary);
+}
+
+.news .row .content .posts-list .meta span {
+  font-size: 15px;
+  color: #838893;
+}
+
+.news .row .content .posts-list p {
+  margin-top: 20px;
+}
+
+.news .row .content .posts-list hr {
+  color: #888;
+  margin-bottom: 20px;
+}
+
+.news .row .content .posts-list .readmore {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  line-height: 1;
+  transition: 0.3s;
+  color: #838893;
+}
+
+.news .row .content .posts-list .readmore i {
+  line-height: 0;
+  margin-left: 6px;
+  font-size: 16px;
+}
+
+.news .row .content .posts-list .post-item:hover .post-title,
+.news .row .content .posts-list .post-item:hover .readmore {
+  color: var(--color-primary);
+}
+
+.news .row .content .posts-list .post-item:hover .post-img img {
+  transform: scale(1.1);
+}
+
+/*--------------------------------------------------------------
+# News Sidebar
+--------------------------------------------------------------*/
+.news .sidebar {
+  padding: 30px;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+}
+
+.news .sidebar .sidebar-title {
+  font-size: 20px;
+  font-weight: 700;
+  padding: 0;
+  margin: 0;
+  color: var(--color-secondary);
+}
+
+.news .sidebar .sidebar-item+.sidebar-item {
+  margin-top: 40px;
+}
+
+.news .sidebar .search-form form {
+  background: #fff;
+  border: 1px solid rgba(82, 86, 94, 0.3);
+  padding: 3px 10px;
+  position: relative;
+}
+
+.news .sidebar .search-form form input[type=text] {
+  border: 0;
+  padding: 4px;
+  border-radius: 4px;
+  width: calc(100% - 40px);
+}
+
+.news .sidebar .search-form form input[type=text]:focus {
+  outline: none;
+}
+
+.news .sidebar .search-form form button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  border: 0;
+  background: none;
+  font-size: 16px;
+  padding: 0 15px;
+  margin: -1px;
+  background: var(--color-primary);
+  color: var(--color-secondary);
+  transition: 0.3s;
+  border-radius: 0 4px 4px 0;
+  line-height: 0;
+}
+
+.news .sidebar .search-form form button i {
+  line-height: 0;
+}
+
+.news .sidebar .search-form form button:hover {
+  background: var(--color-red-upu);
+}
+
+.news .sidebar .categories ul {
+  list-style: none;
+  padding: 0;
+}
+
+.news .sidebar .categories ul li+li {
+  padding-top: 10px;
+}
+
+.news .sidebar .categories ul a {
+  color: var(--color-secondary);
+  transition: 0.3s;
+}
+
+.news .sidebar .categories ul a:hover {
+  color: var(--color-default);
+}
+
+.news .sidebar .categories ul a span {
+  padding-left: 5px;
+  color: rgba(54, 77, 89, 0.4);
+  font-size: 14px;
+}
+
+.news .sidebar .recent-posts .post-item {
+  display: flex;
+}
+
+.news .sidebar .recent-posts .post-item+.post-item {
+  margin-top: 15px;
+}
+
+.news .sidebar .recent-posts img {
+  max-width: 80px;
+  margin-right: 15px;
+}
+
+.news .sidebar .recent-posts h4 {
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.news .sidebar .recent-posts h4 a {
+  color: var(--color-secondary);
+  transition: 0.3s;
+}
+
+.news .sidebar .recent-posts h4 a:hover {
+  color: var(--color-primary);
+}
+
+.news .sidebar .recent-posts time {
+  display: block;
+  font-style: italic;
+  font-size: 14px;
+  color: rgba(54, 77, 89, 0.4);
+}
+
+.news .sidebar .tags {
+  margin-bottom: -10px;
+}
+
+.news .sidebar .tags ul {
+  list-style: none;
+  padding: 0;
+}
+
+.news .sidebar .tags ul li {
+  display: inline-block;
+}
+
+.news .sidebar .tags ul a {
+  color: #838893;
+  font-size: 14px;
+  padding: 6px 14px;
+  margin: 0 6px 8px 0;
+  border: 1px solid rgba(131, 136, 147, 0.4);
+  display: inline-block;
+  transition: 0.3s;
+}
+
+.news .sidebar .tags ul a:hover {
+  color: var(--color-secondary);
+  border: 1px solid var(--color-primary);
+  background: var(--color-primary);
+}
+
+.news .sidebar .tags ul a span {
+  padding-left: 5px;
+  color: rgba(131, 136, 147, 0.8);
+  font-size: 14px;
+}
+
+/*--------------------------------------------------------------
+# News Details
+--------------------------------------------------------------*/
+.news .news-details {
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+}
+
+.news .news-details .post-img {
+  margin: -30px -30px 20px -30px;
+  overflow: hidden;
+}
+
+.news .news-details .title {
+  font-size: 28px;
+  font-weight: 700;
+  padding: 0;
+  margin: 20px 0 0 0;
+  color: var(--color-secondary);
+}
+
+.news .news-details .content {
+  margin-top: 20px;
+}
+
+.news .news-details .content h3 {
+  font-size: 22px;
+  margin-top: 30px;
+  font-weight: bold;
+}
+
+.news .news-details .content blockquote {
+  overflow: hidden;
+  background-color: rgba(82, 86, 94, 0.06);
+  padding: 60px;
+  position: relative;
+  text-align: center;
+  margin: 20px 0;
+}
+
+.news .news-details .content blockquote p {
+  color: var(--color-default);
+  line-height: 1.6;
+  margin-bottom: 0;
+  font-style: italic;
+  font-weight: 500;
+  font-size: 22px;
+}
+
+.news .news-details .content blockquote:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 3px;
+  background-color: var(--color-primary);
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+/* My Blockquote */
+.service-details blockquote {
+  overflow: hidden;
+  background-color: rgba(82, 86, 94, 0.06);
+  padding: 60px;
+  position: relative;
+  text-align: center;
+  margin: 20px 0;
+}
+
+.service-details blockquote p {
+  color: var(--color-default);
+  line-height: 1.6;
+  margin-bottom: 0;
+  font-style: italic;
+  font-weight: 500;
+  font-size: 22px;
+}
+
+.service-details blockquote:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 3px;
+  background-color: var(--color-primary);
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+
+
+.news .news-details .meta-top {
+  margin-top: 20px;
+  color: #6c757d;
+}
+
+.news .news-details .meta-top ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+.news .news-details .meta-top ul li+li {
+  padding-left: 20px;
+}
+
+.news .news-details .meta-top i {
+  font-size: 16px;
+  margin-right: 8px;
+  line-height: 0;
+  color: var(--color-primary);
+}
+
+.news .news-details .meta-top a {
+  color: #6c757d;
+  font-size: 14px;
+  display: inline-block;
+  line-height: 1;
+  transition: 0.3s;
+}
+
+.news .news-details .meta-top a:hover {
+  color: var(--color-primary);
+}
+
+.news .news-details .meta-bottom {
+  padding-top: 10px;
+  border-top: 1px solid rgba(82, 86, 94, 0.15);
+}
+
+.news .news-details .meta-bottom i {
+  color: #838893;
+  display: inline;
+}
+
+.news .news-details .meta-bottom a {
+  color: rgba(82, 86, 94, 0.8);
+  transition: 0.3s;
+}
+
+.news .news-details .meta-bottom a:hover {
+  color: var(--color-primary);
+}
+
+.news .news-details .meta-bottom .cats {
+  list-style: none;
+  display: inline;
+  padding: 0 20px 0 0;
+  font-size: 14px;
+}
+
+.news .news-details .meta-bottom .cats li {
+  display: inline-block;
+}
+
+.news .news-details .meta-bottom .tags {
+  list-style: none;
+  display: inline;
+  padding: 0;
+  font-size: 14px;
+}
+
+.news .news-details .meta-bottom .tags li {
+  display: inline-block;
+}
+
+.news .news-details .meta-bottom .tags li+li::before {
+  padding-right: 6px;
+  color: var(--color-default);
+  content: ",";
+}
+
+.news .news-details .meta-bottom .share {
+  font-size: 16px;
+}
+
+.news .news-details .meta-bottom .share i {
+  padding-left: 5px;
+}
+
+.news .post-author {
+  padding: 20px;
+  margin-top: 30px;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+}
+
+.news .post-author img {
+  max-width: 120px;
+  margin-right: 20px;
+}
+
+.news .post-author h4 {
+  font-weight: 600;
+  font-size: 22px;
+  margin-bottom: 0px;
+  padding: 0;
+  color: var(--color-secondary);
+}
+
+.news .post-author .social-links {
+  margin: 0 10px 10px 0;
+}
+
+.news .post-author .social-links a {
+  color: rgba(82, 86, 94, 0.5);
+  margin-right: 5px;
+}
+
+.news .post-author p {
+  font-style: italic;
+  color: rgba(108, 117, 125, 0.8);
+  margin-bottom: 0;
+}
+
+
 /*--------------------------------------------------------------
 # Blog Details
 --------------------------------------------------------------*/
@@ -2180,6 +2881,39 @@ section {
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+/* My Blockquote */
+.service-details blockquote {
+  overflow: hidden;
+  background-color: rgba(82, 86, 94, 0.06);
+  padding: 60px;
+  position: relative;
+  text-align: center;
+  margin: 20px 0;
+}
+
+.service-details blockquote p {
+  color: var(--color-default);
+  line-height: 1.6;
+  margin-bottom: 0;
+  font-style: italic;
+  font-weight: 500;
+  font-size: 22px;
+}
+
+.service-details blockquote:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 3px;
+  background-color: var(--color-primary);
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+
 
 .blog .blog-details .meta-top {
   margin-top: 20px;
@@ -2580,7 +3314,7 @@ section {
 --------------------------------------------------------------*/
 .footer {
   color: #fff;
-  background: url("../img/footer-bg.jpg") top center no-repeat;
+  background: url("../img/hero/gedung-upu.jpg") top center no-repeat;
   background-size: cover;
   font-size: 14px;
   padding: 80px 0 60px 0;
